testdata/baselines/reference/submodule/conformance/destructuringParameterDeclaration9(strict=true).errors.txt
index.js(7,9): error TS7031: Binding element 'json' implicitly has an 'any[]' type.
index.js(15,9): error TS7031: Binding element 'json' implicitly has an 'any[]' type.
index.js(37,20): error TS7031: Binding element 'json' implicitly has an 'any[]' type.
index.js(42,15): error TS7031: Binding element 'json' implicitly has an 'any[]' type.


==== index.js (4 errors) ====
    /**
     * @param {Object} [config]
     * @param {Partial<Record<'json' | 'jsonc' | 'json5', string[]>>} [config.additionalFiles]
     */
    export function prepareConfig({
        additionalFiles: {
            json = []
            ~~~~
!!! error TS7031: Binding element 'json' implicitly has an 'any[]' type.
        } = {}
    } = {}) {
        json // string[]
    }
    
    export function prepareConfigWithoutAnnotation({
        additionalFiles: {
            json = []
            ~~~~
!!! error TS7031: Binding element 'json' implicitly has an 'any[]' type.
        } = {}
    } = {}) {
        json
    }
    
    /** @type {(param: {
      additionalFiles?: Partial<Record<"json" | "jsonc" | "json5", string[]>>;
    }) => void} */
    export const prepareConfigWithContextualSignature = ({
        additionalFiles: {
            json = []
        } = {}
    } = {})=>  {
        json // string[]
    }
    
    // Additional repros from https://github.com/microsoft/TypeScript/issues/59936
    
    /**
     * @param {{ a?: { json?: string[] }}} [config]
     */
    function f1({ a: { json = [] } = {} } = {}) { return json }
                       ~~~~
!!! error TS7031: Binding element 'json' implicitly has an 'any[]' type.
    
    /**
     * @param {[[string[]?]?]} [x]
     */
    function f2([[json = []] = []] = []) { return json }
                  ~~~~
!!! error TS7031: Binding element 'json' implicitly has an 'any[]' type.
    